feat: enable safe Recipe persistence
